--- a/literatura.bib
+++ b/literatura.bib
@@ -12,6 +12,7 @@ year = {2011},
 }
 
 @Misc{XSS,
+key = {XSS},
 title = {Cross-site Scripting (XSS)},
 howpublished = {\url{https://www.owasp.org/index.php/Cross-site_Scripting_(XSS)}},
 }
@@ -22,23 +23,26 @@ title = {XSS (Cross Site Scripting) Prevention Cheat Sheet},
 howpublished = {\url{https://www.owasp.org/index.php/XSS_(Cross_Site_Scripting)_Prevention_Cheat_Sheet}},
 }
 
-@Misc{CSP,
-title = {Content Security Policy},
-howpublished = {\url{https://www.owasp.org/index.php/Content_Security_Policy}},
+@Misc{SQL,
+key = {SQL},
+title = {SQL Injection (SQLi)},
+howpublished = {\url{https://www.acunetix.com/websitesecurity/sql-injection/}},
 }
 
-@Misc{SQL,
+@Misc{SQL_prev,
 author = {Dave Wichers and Jim Manico and Matt Seil and Dhiraj Mishra},
 title = {SQL Injection Prevention Cheat Sheet},
 howpublished = {\url{https://www.owasp.org/index.php/SQL_Injection_Prevention_Cheat_Sheet}},
 }
 
 @Misc{AC,
+key = {AC},
 title = {Access Control Cheat Sheet},
 howpublished = {\url{https://www.owasp.org/index.php/Access_Control_Cheat_Sheet}},
 }
 
 @Misc{WS,
+key = {WS},
 title = {Web Server Security and Database Server Security},
 howpublished = {\url{https://www.acunetix.com/websitesecurity/webserver-security/}},
 }
@@ -50,6 +54,7 @@ OPThowpublished = {\url{https://www.youtube.com/watch?v=sY7pUJU8a7U}},
 }
 
 @Misc{Top10,
+key = {Top10},
 title = {Top 10 Project},
 howpublished = {\url{https://www.owasp.org/index.php/Category:OWASP_Top_Ten_Project}},
 }
