--- a/literatura.bib
+++ b/literatura.bib
@@ -59,6 +59,12 @@ title = {Top 10 Project},
 howpublished = {\url{https://www.owasp.org/index.php/Category:OWASP_Top_Ten_Project}},
 }
 
+@Misc{Sanit,
+key = {Sanit},
+title = {Validating Sanitizing and Escaping User Data},
+howpublished = {\url{https://codex.wordpress.org/Validating_Sanitizing_and_Escaping_User_Data}},
+}
+
 
 
 
